--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -545,6 +545,7 @@ Swagger generator `@nestia/sdk` supports three type of comment tags for controll
   - Hiding
     - `@deprecated`: mark as `deprecated`
     - `@internal`: hide, never be shown
+    - `@ignore`: hide, never be shown, even in the SDK side
   - Labeling
     - `@summary` : short description of endpoint
     - `@tag {name}`: grouppig
@@ -553,7 +554,7 @@ Swagger generator `@nestia/sdk` supports three type of comment tags for controll
     - `@security {key}`: security scheme key
     - `@security {key} {...scopes}`: +scopes for OAuth2 type
 
-At first, `@internal` tag is used to hide the controller method from the Swagger Documents. When you use it, the controller method would not be written in the `swagger.json` file. Otherwise, the `@deprecated` tag is used to mark the controller method as deprecated. When you use it, Swagger Editor will show the deprecated message about the route method like below.
+At first, `@internal` and `@ignore` tags are used to hide the controller method from the Swagger Documents. When you use one of them, the controller method would not be written in the `swagger.json` file. Otherwise, the `@deprecated` tag is used to mark the controller method as deprecated. When you use it, Swagger Editor will show the deprecated message about the route method like below.
 
 Also, the `@summary` tag is used to write short description of the endpoint. By the way, the `@summary` tag can be replaced by writing top sentence ends with `.` symbol. The other one, `@tag {name}` tag is used for only groupping.
 
