--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -251,7 +251,7 @@ module.exports = {
       patterns: [
         {
           from: ".env",
-          to: "[name][extension]",
+          to: "[name][ext]",
         },
         // {
         //   from: "./node_modules/.prisma/client/*.node",
